lay out top header elements

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href="#" class="menu-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="icon"
+                  class="icon --light"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                 >
@@ -44,7 +44,7 @@
               <a href="#" class="menu-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="icon"
+                  class="icon --light"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                 >
@@ -61,7 +61,7 @@
               <a href="#" class="menu-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="icon"
+                  class="icon --light"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                 >
@@ -79,7 +79,7 @@
               <a href="#" class="menu-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="icon"
+                  class="icon --light"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                 >
@@ -96,7 +96,7 @@
               <a href="#" class="menu-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="icon"
+                  class="icon --light"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                 >
@@ -114,7 +114,7 @@
               <a href="#" class="menu-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="icon"
+                  class="icon --light"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                 >
@@ -133,7 +133,7 @@
               <a href="#" class="menu-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="icon"
+                  class="icon --light"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                 >
@@ -150,7 +150,7 @@
               <a href="#" class="menu-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="icon"
+                  class="icon --light"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                 >
@@ -167,7 +167,7 @@
               <a href="#" class="menu-link">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="icon"
+                  class="icon --light"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                 >
@@ -187,7 +187,58 @@
         </nav>
       </div>
       <div class="main-window">
-        <header class="main-top-header"></header>
+        <header class="main-top-header">
+          <div class="search-box">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon --dark"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+              />
+            </svg>
+            <input type="text" class="search-box-input" />
+          </div>
+          <div class="profile-corner">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon --dark"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
+              />
+            </svg>
+            <img
+              src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairMiaWallace&accessoriesType=Prescription02&hairColor=BlondeGolden&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Surprised&eyebrowType=SadConcerned&mouthType=Concerned&skinColor=Pale"
+            />
+            <p class="profile-name">Morgan Oakley</p>
+          </div>
+          <div class="welcome"></div>
+          <img
+            src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairMiaWallace&accessoriesType=Prescription02&hairColor=BlondeGolden&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Surprised&eyebrowType=SadConcerned&mouthType=Concerned&skinColor=Pale"
+          />
+          <div class="welcome-message">
+            <p class="greeting">Hi there,</p>
+            <p class="full-Id">Morgan Oakley (@morgan)</p>
+          </div>
+          <div class="action-items">
+            <button class="btn">New</button>
+            <button class="btn">Upload</button>
+            <button class="btn">Share</button>
+          </div>
+        </header>
         <main class="dashboard-items"></main>
       </div>
     </div>
