arrange top header to grid

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <div class="search-box">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              class="icon --dark"
+              class="icon --dark --top-header"
               fill="none"
               viewBox="0 0 24 24"
               stroke="currentColor"
@@ -203,12 +203,16 @@
                 d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
               />
             </svg>
-            <input type="text" class="search-box-input" />
+            <input
+              type="text"
+              class="search-box-input"
+              placeholder="search..."
+            />
           </div>
           <div class="profile-corner">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              class="icon --dark"
+              class="icon --dark --top-header"
               fill="none"
               viewBox="0 0 24 24"
               stroke="currentColor"
@@ -222,16 +226,19 @@
             </svg>
             <img
               src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairMiaWallace&accessoriesType=Prescription02&hairColor=BlondeGolden&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Surprised&eyebrowType=SadConcerned&mouthType=Concerned&skinColor=Pale"
+              class="profile-image --small"
             />
             <p class="profile-name">Morgan Oakley</p>
           </div>
-          <div class="welcome"></div>
-          <img
-            src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairMiaWallace&accessoriesType=Prescription02&hairColor=BlondeGolden&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Surprised&eyebrowType=SadConcerned&mouthType=Concerned&skinColor=Pale"
-          />
-          <div class="welcome-message">
-            <p class="greeting">Hi there,</p>
-            <p class="full-Id">Morgan Oakley (@morgan)</p>
+          <div class="welcome">
+            <img
+              src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairMiaWallace&accessoriesType=Prescription02&hairColor=BlondeGolden&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Surprised&eyebrowType=SadConcerned&mouthType=Concerned&skinColor=Pale"
+              class="profile-image --large"
+            />
+            <div class="welcome-message">
+              <p class="greeting">Hi there,</p>
+              <p class="full-Id">Morgan Oakley (@ok.morgan)</p>
+            </div>
           </div>
           <div class="action-items">
             <button class="btn">New</button>
