lay out main window items

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
                   />
                 </svg>
-                <p class="menu-text">Home</p></a
-              >
+                <p class="menu-text">Home</p>
+              </a>
             </li>
             <li>
               <a href="#" class="menu-link">
@@ -54,8 +54,8 @@
                     clip-rule="evenodd"
                   />
                 </svg>
-                <p class="menu-text">Profile</p></a
-              >
+                <p class="menu-text">Profile</p>
+              </a>
             </li>
             <li>
               <a href="#" class="menu-link">
@@ -72,8 +72,8 @@
                     d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
                   />
                 </svg>
-                <p class="menu-text">Messages</p></a
-              >
+                <p class="menu-text">Messages</p>
+              </a>
             </li>
             <li>
               <a href="#" class="menu-link">
@@ -89,8 +89,8 @@
                     clip-rule="evenodd"
                   />
                 </svg>
-                <p class="menu-text">History</p></a
-              >
+                <p class="menu-text">History</p>
+              </a>
             </li>
             <li>
               <a href="#" class="menu-link">
@@ -107,8 +107,8 @@
                     clip-rule="evenodd"
                   />
                 </svg>
-                <p class="menu-text">Tasks</p></a
-              >
+                <p class="menu-text">Tasks</p>
+              </a>
             </li>
             <li>
               <a href="#" class="menu-link">
@@ -122,8 +122,8 @@
                     d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"
                   />
                 </svg>
-                <p class="menu-text">Communities</p></a
-              >
+                <p class="menu-text">Communities</p>
+              </a>
             </li>
           </ul>
         </nav>
@@ -252,7 +252,7 @@
             <div class="projects-grid">
               <div class="card">
                 <p class="card-title">Super Cool Project</p>
-                <p class="card-description">
+                <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
                   eum, officia nobis animi beatae ag elit. Adipisci, suscipit!
                 </p>
@@ -303,7 +303,7 @@
               </div>
               <div class="card">
                 <p class="card-title">Another Cool Project</p>
-                <p class="card-description">
+                <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
                   eum, officia nobis animi beatae ag elit. Adipisci, suscipit!
                 </p>
@@ -354,7 +354,7 @@
               </div>
               <div class="card">
                 <p class="card-title">Animation Project</p>
-                <p class="card-description">
+                <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
                   eum, officia nobis animi beatae ag elit. Adipisci, suscipit!
                 </p>
@@ -405,7 +405,7 @@
               </div>
               <div class="card">
                 <p class="card-title">Early CSS Project</p>
-                <p class="card-description">
+                <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
                   eum, officia nobis animi beatae ag elit. Adipisci, suscipit!
                 </p>
@@ -456,7 +456,7 @@
               </div>
               <div class="card">
                 <p class="card-title">Advanced Design Project</p>
-                <p class="card-description">
+                <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
                   eum, officia nobis animi beatae ag elit. Adipisci, suscipit!
                 </p>
@@ -507,7 +507,7 @@
               </div>
               <div class="card">
                 <p class="card-title">Music Project</p>
-                <p class="card-description">
+                <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
                   eum, officia nobis animi beatae ag elit. Adipisci, suscipit!
                 </p>
@@ -559,8 +559,92 @@
             </div>
           </div>
           <div class="articles">
-            <article class="announcements"></article>
-            <article class="trending"></article>
+            <article class="announcements">
+              <h2 class="dash-title">Announcements</h2>
+
+              <ul class="article-list line-break">
+                <li>
+                  <a href="#">
+                    <h4 class="anc-title">Site Maintenance</h4>
+                    <p class="anc-desc --grey-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Dolores
+                    </p>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <h4 class="anc-title">Community Share Day</h4>
+                    <p class="anc-desc --grey-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Dolores, quaerat.
+                    </p>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <h4 class="anc-title">Updated privacy Policy</h4>
+                    <p class="anc-desc --grey-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Dolores, quaerat.
+                    </p>
+                  </a>
+                </li>
+              </ul>
+            </article>
+            <article class="trending">
+              <h2 class="dash-title">Trending</h2>
+              <ul class="article-list">
+                <li>
+                  <a href="#" class="trending-profile">
+                    <img
+                      src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairMiaWallace&accessoriesType=Prescription02&hairColor=BlondeGolden&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Surprised&eyebrowType=SadConcerned&mouthType=Concerned&skinColor=Pale"
+                      class="profile-image --small"
+                    />
+                    <div class="trending-details --grey-text">
+                      <p class="trending-ID">@tegan</p>
+                      <p class="trending-desc">World Peace Builder</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="trending-profile">
+                    <img
+                      src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairMiaWallace&accessoriesType=Prescription02&hairColor=BlondeGolden&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Surprised&eyebrowType=SadConcerned&mouthType=Concerned&skinColor=Pale"
+                      class="profile-image --small"
+                    />
+                    <div class="trending-details --grey-text">
+                      <p class="trending-ID">@morgan</p>
+                      <p class="trending-desc">Super Cool Project</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="trending-profile">
+                    <img
+                      src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairMiaWallace&accessoriesType=Prescription02&hairColor=BlondeGolden&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Surprised&eyebrowType=SadConcerned&mouthType=Concerned&skinColor=Pale"
+                      class="profile-image --small"
+                    />
+                    <div class="trending-details --grey-text">
+                      <p class="trending-ID">@kendall</p>
+                      <p class="trending-desc">Life Changer</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="trending-profile">
+                    <img
+                      src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairMiaWallace&accessoriesType=Prescription02&hairColor=BlondeGolden&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Surprised&eyebrowType=SadConcerned&mouthType=Concerned&skinColor=Pale"
+                      class="profile-image --small"
+                    />
+                    <div class="trending-details --grey-text">
+                      <p class="trending-ID">@alex</p>
+                      <p class="trending-desc">Traffic Marker</p>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </article>
           </div>
         </main>
       </div>
