add drop shadow

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </nav>
       </div>
       <div class="main-window">
-        <header class="main-top-header">
+        <header class="main-top-header drop-shadow">
           <div class="search-box">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -250,7 +250,7 @@
           <div class="projects-container">
             <h2 class="dash-title">Your Projects</h2>
             <div class="projects-grid">
-              <div class="card">
+              <div class="card drop-shadow">
                 <p class="card-title">Super Cool Project</p>
                 <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
@@ -301,7 +301,7 @@
                   </svg>
                 </div>
               </div>
-              <div class="card">
+              <div class="card drop-shadow">
                 <p class="card-title">Another Cool Project</p>
                 <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
@@ -352,7 +352,7 @@
                   </svg>
                 </div>
               </div>
-              <div class="card">
+              <div class="card drop-shadow">
                 <p class="card-title">Animation Project</p>
                 <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
@@ -403,7 +403,7 @@
                   </svg>
                 </div>
               </div>
-              <div class="card">
+              <div class="card drop-shadow">
                 <p class="card-title">Early CSS Project</p>
                 <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
@@ -454,7 +454,7 @@
                   </svg>
                 </div>
               </div>
-              <div class="card">
+              <div class="card drop-shadow">
                 <p class="card-title">Advanced Design Project</p>
                 <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
@@ -505,7 +505,7 @@
                   </svg>
                 </div>
               </div>
-              <div class="card">
+              <div class="card drop-shadow">
                 <p class="card-title">Music Project</p>
                 <p class="card-description --grey-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
@@ -562,7 +562,7 @@
             <article class="announcements">
               <h2 class="dash-title">Announcements</h2>
 
-              <ul class="article-list line-break">
+              <ul class="article-list line-break drop-shadow">
                 <li>
                   <a href="#">
                     <h4 class="anc-title">Site Maintenance</h4>
@@ -594,7 +594,7 @@
             </article>
             <article class="trending">
               <h2 class="dash-title">Trending</h2>
-              <ul class="article-list">
+              <ul class="article-list drop-shadow">
                 <li>
                   <a href="#" class="trending-profile">
                     <img
