tweak type and shadow

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                     <h4 class="anc-title">Site Maintenance</h4>
                     <p class="anc-desc --grey-text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Dolores
+                      Dolores emit si janu
                     </p>
                   </a>
                 </li>
